# oil-regime-model

./: .gitignore  Q&A_Modelo.md  README.md  claude_code_spec.md  pyproject.toml  requirements.txt
app/: __init__.py  app.py
data/: README.md
data/processed/: brent_constant_maturity.csv  brent_futures_long.csv  omr_total_global_inventories.csv  pink_sheet_oil_prices.csv  prices_long.csv
data/synthetic/: brent_forward_curves.csv  brent_spot_daily.csv  stocks_monthly.csv
docs/: minuta_QA_presentacion.md  modelo_extensiones.md  modelo_v1_completo.md  modelo_v2_incertidumbre_T.md  nota_calculo_h.md  nota_calibracion_h_star.md  nota_v2_actualizacion_creencias.md
model/: __init__.py  calibration.py  core.py  data_loader.py  empirics.py  inference.py
scripts/: append_forward_snapshot.py  generate_synthetic_data.py  md_to_pdf.py  sync_data_from_master.py
tests/: __init__.py  test_model.py
